added monthly cost to DOM

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </tbody>
             </table>
         </div> <!-- END EMPLOYEE TABLE DIV-->
+        <h2 id="totalMonthly">Total Monthly: $<span id="totalSpan">0</span></h2>
     </div><!-- END CONTAINER DIV-->
 </body>
 </html>
