--- a/index.html
+++ b/index.html
@@ -5,31 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salary Calculator</title>
 
+    <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
 
     <script src="jquery-3.4.1.min.js"></script>
+    <script src="bootstrap-4.4.1-dist/js/bootstrap.js"></script>
     <script src="client.js"></script>
 
 </head>
 <body>
-    <header>
+    <header class="jumbotron">
         <h1>Salary Calculator</h1>
     </header>
     <div class="container">
         <div id="addEmployeeDiv">
             <h2>Add Employee</h2>
             <div id="inputDiv">
-                <input type="text" id="firstNameInput" placeholder="First Name">
-                <input type="text" id="lastNameInput" placeholder="Last Name">
-                <input type="text" id="idInput" placeholder="ID">
-                <input type="text" id="titleInput" placeholder="Title">
-                <input type="text" id="annualSalaryInput" placeholder="Annual Salary">
-                <button id="addEmployeeBtn">Submit</button>
+                <input type="text" id="firstNameInput" class="input-group my-2" placeholder="First Name">
+                <input type="text" id="lastNameInput" class="input-group" class="input-group my-2" placeholder="Last Name">
+                <input type="text" id="idInput" class="input-group my-2" placeholder="ID">
+                <input type="text" id="titleInput" class="input-group my-2" placeholder="Title">
+                <input type="text" id="annualSalaryInput" class="input-group my-2" placeholder="Annual Salary">
+                <button id="addEmployeeBtn" class="btn btn-success">Submit</button>
             </div> <!-- END Input DIV-->
         </div> <!-- END ADD EMPLOYEE DIV-->
         <div id="employeeTable">
             <h2>Employees</h2>
-            <table>
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>First Name</th>
